| Summary: | ASTERISK-20281: "core set verbose" behaves strangely, can't alias it, cli.conf example broken | ||
| Reporter: | Tim Ringenbach at Asteria Solutions Group (tim_ringenbach) | Labels: | |
| Date Opened: | 2012-08-20 16:02:17 | Date Closed: | 2017-12-18 13:42:10.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_clialiases |
| Versions: | 11.0.0-beta1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | I ran into some problems with 'core set verbose' that really confused me for a while. It looks like in asterisk 11, there's now two versions of this command, one inside rasterisk and one in asterisk itself. The first thing I did "wrong" was create an alias in cli_aliases.conf "set verbose=core set verbose". This caused two different versions of the command to be exposed to me, depending on whether or not I used the "core" prefix. This was very confusing, since one was aliased to the other. Also, I tried uncommenting the 'core set verbose 3 = yes' line in cli.conf. This doesn't work anymore. Eventually I figured out that there's two versions of the command in asterisk now, one in asterisk.c and one in cli.conf. Reading the one in asterisk.conf, I figured out that I needed to edit /etc/asterisk/asterisk.conf to set a default verbose level. So, I think we need to either somehow make the expected behavior work, or remove the cli.conf example, maybe put a warning there not to do that, and warn/disallow aliasing it. And maybe remove the duplicate function, but that's tricky because it's also the 'core set debug' command, which I believe is still implemented only in cli.conf and not handled by the rasterisk client. | ||
| Comments: | By: Jonathan Rose (jrose) 2012-08-30 15:10:40.408-0500 At first this seemed to me like it was working perfectly, but I think I've figured out what the deal is... I normally run in foreground mode. This bug affects remote console operation only. The alias is aliasing the command that you would get when running in foreground mode and when you are running it through a remote console you still have access to that aliased command which obviously isn't normal. By: Tim Ringenbach at Asteria Solutions Group (tim_ringenbach) 2012-08-30 15:15:16.832-0500 Yes, I using an 'asterisk -r' remote console. (That's why I said "rasterisk client" but I should have made it more explicit. I almost never use the "asterisk -c" console, so I didn't think about it and how it would interact with this). By: Matt Jordan (mjordan) 2012-10-04 13:44:28.014-0500 We went ahead and updated the [Upgrading to Asterisk 11|https://wiki.asterisk.org/wiki/display/AST/Upgrading+to+Asterisk+11] notes on the wiki to note this limitation. As it turns out, adding the ability to specify the verbosity on the remote console did not adequately take into account CLI aliases, and fixing that is going to be tricky. For now, I'd prefer to make sure everyone is aware of the problem, and take our time making sure we get the solution correct before implementing it in Asterisk 11. Sort of a long winded way of saying this may take a bit :-) By: Tim Ringenbach at Asteria Solutions Group (tim_ringenbach) 2012-10-10 11:08:53.955-0500 Thanks for the update :) Does the internal verbose setting (the one only accessible when setting the alias) still do anything, and if so, what? If it doesn't do anything, can't you just remove the command? That would make trying to alias it throw an error when you actually used the aliased command, instead of pretending to work. Also, your note on the wiki is titled "Verbose/Debug setting changes" but you don't actually mention the 'core set debug' command in that section. By: Friendly Automation (friendly-automation) 2017-12-18 13:42:11.534-0600 Change 7563 merged by Jenkins2: CLI: Remove special handling of 'core set verbose' from rasterisk. [https://gerrit.asterisk.org/7563|https://gerrit.asterisk.org/7563] By: Friendly Automation (friendly-automation) 2017-12-18 13:52:06.470-0600 Change 7562 merged by Jenkins2: CLI: Remove special handling of 'core set verbose' from rasterisk. [https://gerrit.asterisk.org/7562|https://gerrit.asterisk.org/7562] By: Friendly Automation (friendly-automation) 2017-12-18 14:43:43.140-0600 Change 7561 merged by George Joseph: CLI: Remove special handling of 'core set verbose' from rasterisk. [https://gerrit.asterisk.org/7561|https://gerrit.asterisk.org/7561] | ||